--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PestifyApp</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_ens">Ensiklopedia</string>
+    <string name="menu_pescan">Pescan</string>
+    <string name="menu_history">History</string>
+    <string name="menu_profile">Profile</string>
+    <string name="next_page">Next</string>
+    <string name="back_page">Back</string>
 </resources>
