--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="menu_pescan">Pescan</string>
     <string name="menu_history">History</string>
     <string name="menu_profile">Profile</string>
-    <string name="next_page">Next</string>
+    <string name="next_page">Skip</string>
     <string name="back_page">Back</string>
 </resources>
