--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">PestifyApp</string>
     <string name="menu_home">Home</string>
-    <string name="menu_ens">Ensiklopedia</string>
+    <string name="menu_ens">Pespedia</string>
     <string name="menu_pescan">Pescan</string>
     <string name="menu_history">History</string>
     <string name="menu_profile">Profile</string>
     <string name="next_page">Skip</string>
     <string name="back_page">Back</string>
+    <string name="plants">Plants</string>
+    <string name="read_more">Read More</string>
+    <string name="image_desc">"New to Aquaponics? Create Your Own Setup Now!"</string>
 </resources>
