--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="read_more">Read More</string>
     <string name="image_desc">"New to Aquaponics? Create Your Own Setup Now!"</string>
     <string name="instruction">"Please enter your nickname (one word only)"</string>
+    <string name="search">Search</string>
+    <string name="backtop">Back to Top</string>
+    <string name="ensiklopedia">Pespedia</string>
+    <string name="detail">Details</string>
 </resources>
